--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,7 @@ commands = python setup.py nosetests []
 
 deps =
     nose
-    httplib2>=0.7.0,<=0.8.0
-    oauth2>=1.2
+    requests-oauthlib>=0.4.1
     unittest2
     coverage
     dingus
